# VHF

./: .dockerignore  .env.example  .gcloudignore  .gitattributes  .gitignore  AGENTS.md  README.md  build.bat  build_mobile_apk.bat  buildapp.bat  buildlinux  buildwin.bat  pyproject.toml  run.bat  run.sh  run_desktop.bat  run_dev.bat  run_mobile.bat  setup.bat  setup.sh
apps/android/: README.md  build.bat  pubspec.yaml  run.bat
apps/linux/: build.sh  pyproject.toml  run.sh
apps/linux/config/: default.toml
apps/linux/packaging/: PRANA_ELEX.spec  build.sh
apps/linux/packaging/debian/: control.in  postinst  postrm  prana-station.service
apps/linux/src/prana_linux/: __init__.py  credential_store.py  station.py
apps/linux/src/prana_linux/audio/: __init__.py  pulse.py
apps/prana_mobile/: README.md  pubspec.yaml
apps/windows/: build.bat  pyproject.toml  run.bat
apps/windows/config/: default.toml
apps/windows/packaging/: PRANA_ELEX.spec  build.bat  version_info.txt
apps/windows/packaging/installer/: PRANA_ELEX.iss
apps/windows/src/prana_windows/: __init__.py  cli.py  credential_store.py  desktop.py  frozen_entry.py  settings.py  station.py
apps/windows/src/prana_windows/audio/: __init__.py  wasapi.py
apps/windows/src/prana_windows/ui/: account.py  app.py  main_window.py  tray.py
apps/windows/src/prana_windows/ui/components/: chat_feed.py  header_bar.py  language_block.py
apps/windows/src/prana_windows/ui/dialogs/: __init__.py  history.py  settings.py
apps/windows/src/prana_windows/ui/pages/: account.py  account_center.py  plans.py  translation.py
config/: default.toml  rpi.toml  windows-device.toml
config/profiles/: raspberry-pi.toml  windows-device.toml
docs/: android-station-architecture.md  architecture-overview.md  architecture.md  staging-e2e-test-guide.md
infra/firebase/: firestore.rules
infra/terraform/: .terraform.lock.hcl  README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
installers/: README.md
scripts/: PRANA_ELEX.spec  build.bat  installer_step.py
scripts/dev/: run-cli.bat  run-cli.sh  run-dev.bat  run-dev.sh  run-mobile.ps1
scripts/installer/: PRANA_ELEX.iss
scripts/packaging/: PRANA_ELEX.spec  build.bat  installer_step.py  validate_release.py
scripts/setup/: backfill_admin_search.py  bootstrap_subscription_plans.py  setup.bat  setup.sh
services/prana_admin/: Dockerfile  __init__.py  i18n.py  main.py  requirements.txt
services/prana_api/: Dockerfile  __init__.py  audio.py  auth.py  config.py  errors.py  google_auth.py  google_services.py  main.py  memory_repository.py  models.py  plan_catalog.py  repository.py  requirements.txt  security.py
src/prana_elex/: __init__.py  __main__.py  __main_window__.py
src/vhf_processor/: main.py  requirements.txt
tests/: __init__.py  test_account_shell.py  test_client_build_config.py  test_linux_user_config.py  test_release_validator.py  test_saas_backend.py  test_windows_installer.py
tests/admin/: __init__.py  test_admin_ui.py
tests/api/: __init__.py  test_firestore_rules.py  test_google_auth.py  test_saas_api.py  test_saas_backend.py  test_station_api.py  test_subscription_plans.py
tests/client/: __init__.py  test_account_shell.py  test_google_oauth.py  test_pipeline_units.py  test_station_mode.py  test_wasapi.py
tests/core/: test_architecture_boundaries.py  test_backend_identity.py  test_pipeline_units.py  test_station_mode.py
tests/linux/: test_linux_platform.py
tests/packaging/: test_client_build_config.py  test_mobile_android_config.py  test_release_validator.py  test_windows_installer.py
tests/windows/: test_account_shell.py  test_google_oauth.py  test_wasapi.py
tools/packaging/: project_metadata.py  validate_release.py
vhf_processor/: main.py  requirements.txt
vhf_processor/audio/: base.py  pulse_backend.py  recorder.py  wasapi_backend.py
vhf_processor/config/: default.toml  schema.py
vhf_processor/gemini/: client.py  prompt_builder.py  response_parser.py
vhf_processor/gui/: app.py  chat_feed.py  header_bar.py  language_block.py
vhf_processor/models/: result.py
vhf_processor/pipeline/: orchestrator.py
(+178 files in other folders)
