[project]
name = "prana-elex"
version = "1.1.0"
description = "PRANA ELEX — VHF Marine Radio transcription and translation using Gemini 2.5"
authors = [{ name = "DLV Corporation" }]
requires-python = ">=3.11"
dependencies = [
    "pyaudiowpatch>=0.2.12; sys_platform == 'win32'",
    "pyaudio>=0.2.14; sys_platform != 'win32'",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "torch>=2.4.0; sys_platform == 'win32'",
    "torch>=2.4,<2.9; sys_platform != 'win32'",
    "silero-vad>=4.0",
    "webrtcvad>=2.0.10",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "keyring>=25.6.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pyside6>=6.7.0",
    "qasync>=0.27.0",
    "qtawesome==1.4.2",
    "qrcode[pil]>=8.0",
]

[project.scripts]
prana-elex = "prana_elex:cli"
prana-station = "prana_elex:station"
prana-station-provision = "prana_elex:station_provision"

[tool.setuptools.packages.find]
where = ["src"]
include = ["prana_elex*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
